--- a/cards/templates/cards/register.html
+++ b/cards/templates/cards/register.html
@@ -37,11 +37,7 @@
 
 
 
-            {% for msg in form.error_messages %}
-              <div class="alert alert-danger">
-                  <strong>{{msg}} </strong>
-              </div>
-            {% endfor %}
+
 
             {% if form.errors %}
                 {% for field in form %}
@@ -87,19 +83,19 @@
                 <input type="submit" value="Register Account" class="btn btn-primary btn-user btn-block" />
                 
                 <hr>
-                <a href="index.html" class="btn btn-google btn-user btn-block">
+                <a href="index.html" style="display: none;" class="btn btn-google btn-user btn-block">
                   <i class="fab fa-google fa-fw"></i> Register with Google
                 </a>
-                <a href="index.html" class="btn btn-facebook btn-user btn-block">
+                <a href="index.html" style="display: none;" class="btn btn-facebook btn-user btn-block">
                   <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
                 </a>
               </form>
               <hr>
               <div class="text-center">
-                <a class="small" href="forgot_password">Forgot Password?</a>
+                <a class="small" style="display: none;" href="forgot_password">Forgot Password?</a>
               </div>
               <div class="text-center">
-                <a class="small" href="login">Already have an account? Login!</a>
+                <a class="small" href="//{{request.META.HTTP_HOST}}/login">Already have an account? Login!</a>
               </div>
             </div>
           </div>
