--- a/cards/templates/cards/login.html
+++ b/cards/templates/cards/login.html
@@ -66,16 +66,16 @@
                     <input type="submit" value="Login"  class="btn btn-primary btn-user btn-block">
 
                     <hr>
-                    <a href="index.html" class="btn btn-google btn-user btn-block">
+                    <a href="index.html" style="display: none;" class="btn btn-google btn-user btn-block">
                       <i class="fab fa-google fa-fw"></i> Login with Google
                     </a>
-                    <a href="index.html" class="btn btn-facebook btn-user btn-block">
+                    <a href="index.html" style="display: none;" class="btn btn-facebook btn-user btn-block">
                       <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
                     </a>
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="small" href="forgot_password">Forgot Password?</a>
+                    <a class="small" style="display: none;" href="forgot_password">Forgot Password?</a>
                   </div>
                   <div class="text-center">
                     <a class="small" href="register">Create an Account!</a>
